# reapermc

./: .gitignore  CHANGELOG.md  README.md  about.md  pyproject.toml
docs/: table_of_contents.md
docs/contents/: EntityNBT.md  Expr.md  defer.md  effect.md  effect_raw.md  flag.md  get_time.md  listener.md  loop.md  loop_break.md  loop_cycle.md  register_death_event.md  scoreboard.md  set_time.md  sleep.md  summon.md  tag.md  untag.md  var.md
docs/funcs/: Object.md  ScoreCheck.md  defer.md  effect.md  effect_raw.md  flag.md  get_time.md  join.md  load.md  loop.md  loop_break.md  loop_cycle.md  postjoin.md  postload.md  posttick.md  prejoin.md  preload.md  pretick.md  register_death_event.md  set_time.md  sleep.md  summon.md  tag.md  tick.md  untag.md  var.md
docs/misc/: builtin_events.md  builtin_flags.md  flags.md  mob_loot_gamerule.md
examples/basic/: beet.yml
examples/entity_nbt_basic/: beet.yml
examples/event_basic3/: beet.yml
examples/flag_basic/: beet.yml
reapermc/: __init__.py
reapermc/modules/: api.bolt  better_summon.bolt  core.bolt  death_events.bolt  defer.bolt  effect.bolt  entity_nbt.bolt  event_handler.bolt  expr.bolt  flag.bolt  flag_handler.bolt  kill.bolt  loop.bolt  loop_break.bolt  loop_cycle.bolt  math.bolt  object.bolt  register_event.bolt  score_check.bolt  scoreboard.bolt  sleep.bolt  spark.bolt  summon.bolt  tag.bolt  time.bolt  util.bolt  var.bolt  xp.bolt
reapermc/plugins/: nbt_literals.py
reapermc/resources/: death_events_payload.json  entity_nbt_payload.json  object_payload.json
typings/: nbtlib.py
(+114 files in other folders)
