[tool.poetry]
name = "reapermc"
version = "1.4.0"
description = "A high level framework for the Bolt scripting language."
authors = ["Yeti <arcticyeti1@gmail.com>"]
license = "MIT"

homepage = "https://github.com/reapermc/reapermc"
readme = "README.md"

keywords = [
  "beet",
  "bolt",
  "minecraft",
  "minecraft-commands",
  "mcfunction",
  "framework",
  "library",
  "reaper",
  "reapermc"
]


include = ["reapermc/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
beet = ">=0.80.1"
mecha = ">=0.61.0"
bolt = ">=0.21.0"
bolt-expressions = ">=0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
pytest-insta = "^0.1.11"
lectern = ">=0.25.0"
python-semantic-release = "^7.32.1"

[tool.pytest.ini_options]
addopts = "tests --import-mode=importlib"

[tool.pyright]
typeCheckingMode = "strict"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = "reapermc/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = true
upload_to_repository = true
build_command = "poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
